src/App.css
:root {
	--color-a-1: rgba(20,20,25,1);
	--color-a-2: rgba(30,30,35,1);
	--color-a-3: rgba(40,40,45,1);
	--color-a-4: rgba(50,50,55,1);
	--color-a-5: rgba(70,70,75,1);
	--color-a-6: rgba(90,90,95,1);

	/*--color-b-1: rgba(250,250,255,1);*/
	--color-b-1: rgba(255,255,255,1);
	--color-b-2: rgba(210,210,220,1);
	--color-b-3: rgba(200,200,210,1);
	--color-b-4: rgba(190,190,200,1);
	--color-b-5: rgba(170,170,180,1);
	--color-b-6: rgba(150,150,160,1);

	/*--color-c-1: #ecdcff;
	--color-c-2: #d5baff;
	--color-c-3: #5e00c1;
	--color-c-4: #42008a;*/

	--color-c-1: #d6e3ff;
	--color-c-2: #a9c7ff;
	--color-c-3: #00468b;
	--color-c-4: #003063;

	background-color: var(--color-b-1);

}

.App {
	text-align: center;
	color: var(--color-a-1);
}

.App-header {
	/*background-color: #282c34;*/
	
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: top;
	font-size: calc(10px + 2vmin);
	color: var(--color-a-5);

}

.logo-image {
  	width: max(300px, 30%);
}

.header-outside {
	background-color: var(--color-c-1);
	width: 100%;
	padding: 0;
	height: 70px;

	display: flex;
	align-items: center;
	justify-content: center;
	overflow: hidden;

	box-shadow: 0 0 0px 0px rgba(0,0,0,.3);
}

.header-inside {
	background-color: var(--color-c-2);
	height: 110px;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 0px 30px;

	border-radius: 2% 2% 2% 2% / 10% 10% 20% 20%;
  	animation: header-animation 5s ease-in-out normal infinite;

	/*background-image: url("/public/pictures/brushstroke 2.png");*/
	background-size: 120% 320%;
	background-position: 10%;
	color: var(--color-a-1);
}

@keyframes header-animation {
	0% {
		border-radius: 3% 7% 7% 3% / 30% 30% 70% 70%;
	}
	25% { 
		border-radius: 6% 4% 7% 2% / 76% 46% 54% 24%;
	}
	50% {
		border-radius: 5% 5% 3% 7% / 25% 27% 23% 25%;
	}
	75% {
		border-radius: 3% 7% 6% 4% / 63% 68% 32% 37%;
	}
	100% {
		border-radius: 3% 7% 7% 3% / 30% 30% 70% 70%;
	}
}

.art-image {
 	width: 33.4vw;
}

.wide-art-image {
	width: 70vw;
	margin-top: -5vw;
}

.three-panel {
	margin: 0;
	padding: 0;
	height: 33.33333333vw;
	width: 100vw;
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 0;
}
.wide-panel {
	height: 39vw;
	display: flex;
	align-items:flex-start;
	justify-content: center;
}

.short-panel {
	height: 33vw;
	overflow: hidden;
}

.crop-1-box {
	overflow: hidden;
	width: 33.333334vw;
	height: 33.33333333vw;
	margin: 0;
	padding: 0;
	display: flex;
	align-items: center;
	justify-content: center;
	perspective: 1000px;
}

.crop-image {
	overflow: hidden;
}

.no-crop {
	overflow: visible;
}

.crop-36-image {
  	width: 36vw;
}

.crop-38-image {
  	width: 38vw;
}

.crop-30-image {
	width: 30vw;
}

.crop-333-image {
	width: 33.3333333vw;
}

.crop-25-image {
	width: 25vw;
}

.white-shadow {
	box-shadow: inset 0 0 50px 50px white;
}

.wobble {
	animation-name: wobble-animation;
	animation-timing-function: ease-in-out;
	animation-iteration-count: infinite;
	animation-duration: 4s;
	animation-direction: alternate;
}

.wobble-duration-2 {
	animation-duration: 6.2s;

}

@keyframes wobble-animation {
	0% {
		transform: rotate(5deg);
	}
	100% {
		transform: rotate(-5deg);
	}
}

.snap {
	animation-name: snap-animation;
	animation-timing-function: ease-in-out;
	animation-iteration-count: infinite;
	animation-duration: 1s;
	animation-direction: alternate;
}

@keyframes snap-animation {
	0% {
		transform: rotate(-5deg);
		width: 38vw;
	}
	1% {
		transform: rotate(-5deg);
		width: 38vw;
	}

	33.999% {
		transform: rotate(-5deg);
		width: 38vw;
	}
	34% {
		transform: rotate(5deg);
		width: 38vw;
	}

	66.999% {
		transform: rotate(5deg);
		width: 38vw;
	}
	70% {
		transform: rotate(-15deg);
		width: 42vw;
	}

	89.999% {
		transform: rotate(-15deg);
		width: 42vw;
	}
	90% {
		transform: rotate(0deg);
	}

	100% {
		transform: rotate(0deg);
	}
}

.droplet {
	border-radius: 45% 95% 55% 75% / 75% 65% 75% 85%;
	box-shadow: -15px -15px 50px rgba(0,0,0,0.3);
  	animation: droplet-animation 10s ease-in-out alternate infinite;
	z-index: 2;
}

@keyframes droplet-animation {
	0% {
		border-radius: 45% 95% 55% 75% / 75% 65% 75% 85%;
		box-shadow: -15px -15px 50px rgba(0,0,0,0.3);

	}
	25% {
		border-radius: 62% 38% 53% 55% /  25% 35% 75% 85%;
		box-shadow: -10px -5px 50px rgba(0,0,0,0.5);

	}
	50% {
		border-radius: 75% 55% 50% 75% /  65% 75% 55% 55%;
		box-shadow: 5px -5px 50px rgba(0,0,0,0.3);
	}
	75% {
		border-radius: 95% 45% 50% 84% /  35% 80% 55% 95%;
		box-shadow: 10px 5px 50px rgba(0,0,0,0.6);

	}
	100% {
		border-radius: 75% 40% 45% 55% / 55% 75% 30% 55%;
		box-shadow: 15px 15px 50px rgba(0,0,0,0.7);
	}
}

.test-box-thing {
	width: 33.333vw;
	height: 33.333vw;
	background-color: red;
}

.test-box-1 {
	border-radius: 45% 95% 55% 75% / 75% 65% 75% 85%;
		box-shadow: -15px -15px 50px rgba(0,0,0,0.3);
}

.test-box-2 {
	border-radius: 62% 38% 53% 55% / 25% 35% 75% 85%;
		box-shadow: -10px -5px 50px rgba(0,0,0,0.5);
}
.test-box-3 {
	border-radius: 75% 55% 50% 75% / 65% 75% 55% 55%;
		box-shadow: 5px -5px 50px rgba(0,0,0,0.3);
}
.test-box-4 {
	border-radius: 95% 45% 50% 84% / 35% 80% 55% 95%;
		box-shadow: 10px 5px 50px rgba(0,0,0,0.6);
}
.test-box-5 {
	border-radius: 75% 40% 45% 55% / 55% 75% 30% 55%;
		box-shadow: 15px 15px 50px rgba(0,0,0,0.7);
}



.droplet-2 {
	border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
  	animation: droplet-2-animation 12s ease-in-out alternate infinite;
	z-index: 2;
}

@keyframes droplet-2-animation {
	0% {
		border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
		box-shadow: 15px 15px 50px rgba(0,0,0,0.7);
	}
	25% { 
		border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
		box-shadow: 15px 5px 50px rgba(0,0,0,0.6);
	}
	50% {
		border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
		box-shadow: -10px -5px 50px rgba(0,0,0,0.5);
	}
	75% {
		border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;
		box-shadow: -15px -15px 50px rgba(0,0,0,0.3);
	}
}

.droplet-3 {
	border-radius: 3% 7% 6% 4% / 30% 30% 70% 70%;
  	animation: droplet-3-animation 5s ease-in-out normal infinite;
	z-index: 2;
}

@keyframes droplet-3-animation {
	0% {
		border-radius: 3% 7% 7% 3% / 30% 30% 70% 70%;
	}
	25% { 
		border-radius: 6% 4% 7% 2% / 76% 46% 54% 24%;
	}
	50% {
		border-radius: 5% 5% 3% 7% / 55% 27% 73% 45%;
	}
	75% {
		border-radius: 3% 7% 6% 4% / 63% 68% 32% 37%;
	}
	100% {
		border-radius: 3% 7% 7% 3% / 30% 30% 70% 70%;
	}
}

.droplet-4 {
	border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
  	animation: droplet-4-animation 12s ease-in-out alternate infinite;
	z-index: 2;
}

@keyframes droplet-4-animation {
	0% {
		border-radius: 30% 30% 70% 70% / 70% 30% 30% 70%;
	}
	25% { 
		border-radius:  25% 58% 42% 75% /  24% 76% 46% 54%;
	}
	50% {
		border-radius:  67% 50% 50% 33%/  45% 55% 27% 73%;
	}
	75% {
		border-radius:  42% 33% 67% 58% 42% /  37% 63% 68% 32%;
	}
}

.spin {
  	animation: spin-animation 60s linear normal infinite;
	z-index: 2;
}

@keyframes spin-animation {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

.flip-bulb {
	background-image: url("/public/pictures/light blue.jpg");
	background-size: 100%;
	height: 100%;
	width: 33.33334vw;
	transition: all 1.0s linear;
	transform-style: preserve-3d;


	/*transform: rotateY(180deg);*/
	/*backface-visibility: hidden;*/



	animation: flip-bulb-animation 10s linear normal infinite;
  	z-index: 3;
}


@keyframes flip-bulb-animation {
	0% {
		transform: rotateY(0deg);
		background-image: url("/public/pictures/light blue.jpg");
	}
	5% {
		transform: rotateY(90deg);
		background-image: url("/public/pictures/light blue.jpg");
	}
	5.00001% {
		transform: rotateY(270deg);
		background-image: url("/public/pictures/light navy.jpg");
	}
	10% {
		transform: rotateY(360deg);
		background-image: url("/public/pictures/light navy.jpg");
	}


	50% {
		transform: rotateY(360deg);
		background-image: url("/public/pictures/light navy.jpg");
	}
	50.00001% {
		transform: rotateY(0deg);
		background-image: url("/public/pictures/light navy.jpg");
	}
	55% {
		transform: rotateY(90deg);
		background-image: url("/public/pictures/light navy.jpg");
	}
	55.0001% {
		transform: rotateY(270deg);
		background-image: url("/public/pictures/light blue.jpg");
	}
	60% {
		transform: rotateY(360deg);
		background-image: url("/public/pictures/light blue.jpg");
	}


	100% {
		transform: rotateY(360deg);
		background-image: url("/public/pictures/light blue.jpg");
	}

}

.ocean-container {
	height: 18vw;
	width: 100%;
	overflow:hidden;
}

.ocean { 
	margin-top: 15vw;
	height: 3vw;
	width:100vw;
	position:relative;
	bottom:0;
	left:0;
	/*background: #015871;*/
	background: #053468;
	filter: saturate(100%);
	/*box-shadow: inset 0px -45px 25px -25px #053468;*/
	z-index: 10;
}

.below-ocean-panel {
	/*box-shadow: inset 0px -465px 65px -55px #053468;
	z-index: 10;
	position: relative;
	height: 18vw;
	width: 100%;
	margin-top: -18vw;
	padding-top: 25vw;
	margin-bottom: 7vw;*/
}
  
.wave {
	background: url("/public/pictures/wave 2.svg") repeat-x; 
	position: relative;
	top: -12vw;
	width: 300vw;
	height: 28vw;
	animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
	transform: translate3d(0, 0, 0);
	opacity: 1;
	z-index: -1;
}
  
.wave:nth-of-type(2) {
	top: -40vw;
	animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
	opacity: 0.9;
	z-index: -2;

}

@keyframes wave {
	0% {
	  	margin-left: 0;
	}
	100% {
	  	margin-left: -1600px;
	}
}

@keyframes swell {
	0%, 100% {
	  	transform: translate3d(0,-25px,0);
	}
	50% {
	  	transform: translate3d(0,5px,0);
	}
}

.wipe-enter {

}

@media (prefers-reduced-motion: no-preference) {
	.wipe-enter-activator {
	  	animation: wipe-enter-animation 1s 1;
	}
}

@keyframes wipe-enter-animation {
	0% {
		transform: scale(0, .025);
	}
	50% {
		transform: scale(1, .025);
	}
}

.text-box-wrapper {
	display: flex;
	align-items: center;
	justify-content: center;
}

.text-box {
	width: 60.66667vw;
	text-align: start;
	padding: 3vw;

	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: center;
}

.text-title {
	font-size: 30px;
	margin: 0;
	margin-bottom: 20px;
}

.text-body {
	font-size: 20px;
	margin: 0;
}

.socials-container {
	display: flex;
	align-items: flex-start;
	justify-content: center;
	margin: 30px;
}

.socials {
	width: 50px;
	height: 50px;
	margin: 10px;
}

.socials-image {
	width: 50px;
	height: 50px;
	background-size: 100%;

}

.Facebook {
	background-image: url("/public/pictures/socials/Facebook.png");
}

.LinkedIn {
	background-image: url("/public/pictures/socials/LinkedIn.png");
}

.Email {
	background-image: url("/public/pictures/socials/Email.png");
}

.Pinterest {
	background-image: url("/public/pictures/socials/Pinterest.png");
}

.Instagram {
	background-image: url("/public/pictures/socials/Instagram.png");
}

